--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-slate-50 text-foreground;
+    @apply bg-gray-100 text-foreground;
   }
 }
