--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=IBM+Plex+Mono:wght@100..700&family=Inknut+Antiqua:wght@300..900&family=Montserrat:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    @apply font-mono
+    font-family: 'Montserrat', sans-serif;
+}
+
+.shadow-default {
+    @apply shadow-custom  hover:shadow-blue-500 active:shadow-blue-600 
 }
